--- a/css/style.css
+++ b/css/style.css
@@ -22,3 +22,9 @@ body {
 .door_open:hover {
 	opacity: 1;
 }
+
+@media screen and (max-width:456px) {
+	.rakuten_motionWidget {
+		display: none;
+	}
+}
